# Meteo-PiPicoW-SDK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lwipopts.h  main.cpp
bmp/: BMP280.cpp  BMP280.hpp
cmake/: credentials_example.cmake  pico_extras_import.cmake  utils.cmake
dht/: dht.c
ina219/: CMakeLists.txt  ina219.cmake
include/bmp280/: CMakeLists.txt  bmp280.cpp
include/bmp280/include/: bmp280.hpp
include/dht22/: CMakeLists.txt  dht22.c
include/ina219/: CMakeLists.txt  ina219.cc
include/lwip/: lwipopts.h
include/wifiLib/: CMakeLists.txt  wifiLib.cpp
include/wifiLib/include/: wifiLib.hpp
pico-arduino-compat/arduino-compat/arduino-pico/cores/rp2040/api/: Common.cpp  Common.h
src/: main.cpp
